--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8889
+server.port=8888
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/student
@@ -9,5 +9,6 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 logging.level.com.ex = TRACE
-logging.file = appLog.log
+logging.file.path=C:/Users/User/Downloads/student/
+logging.file.name=log.txt
 logging.pattern.file=%d [%level] %c{1.} [%t] %m%n
